my blog added, fixed letter spacing so even distribution of projects

--- a/src/App.scss
+++ b/src/App.scss
@@ -75,6 +75,7 @@ $accent-color: #355cc9;
 .flexWrapper {
   display: flex;
   margin: 0;
+  justify-content: center;
   flex-flow: row wrap;
 }
 
@@ -114,6 +115,28 @@ $accent-color: #355cc9;
       rgba(255, 242, 166, 0.7)
     ),
     url(./images/portfolio1.png);
+  width: 100%;
+  background-position: center center;
+}
+
+.front2 {
+  background-image: linear-gradient(
+      40deg,
+      rgba(67, 138, 243, 0.7),
+      rgba(255, 242, 166, 0.7)
+    ),
+    url(./images/wakyma.png);
+  width: 100%;
+  background-position: center center;
+}
+
+.front3 {
+  background-image: linear-gradient(
+      40deg,
+      rgba(67, 138, 243, 0.7),
+      rgba(255, 242, 166, 0.7)
+    ),
+    url(./images/blog.png);
   width: 100%;
   background-position: center center;
 }
@@ -165,7 +188,7 @@ $accent-color: #355cc9;
   font-size: 1em;
   margin-bottom: 0.3em;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   color: yellowgreen;
   font-weight: 500;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
@@ -194,7 +217,7 @@ $accent-color: #355cc9;
     grid-row: 5;
     grid-column: 1/-1;
     font-size: 0.86em;
-    border-radius: 5px;
+    border-radius: 6px;
     font-weight: 600px;
     line-height: 1.4em;
     overflow: auto;
